k8s/apps/overlays/production/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - podinfo.halvorteigen.no
      secretName: podinfo-tls
  rules:
    - host: podinfo.halvorteigen.no
